fix scrollbar

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -76,6 +76,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: var(--scroll);
+  background-color: hsla(var(--scroll));
   border-radius: 10px;
 }
